--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>PC MASTERS</title>
-	<link rel="stylesheet" type="text/css" href="PCMR.css">
+	<title>AP Computer Science Principles Webpage</title>
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
 	<div id="banner">
-		<h1 style="text-align: left; padding-left: 20px; width: 25%; margin: 0px;">PC Masters</h1>
-		<img id="reddit-link" src="http://i.imgur.com/sdO8tAw.png" style="size: 200px; padding-top: 0px" align="right">
+		<a href="https://www.reddit.com/r/pcmasterrace/" target="_blank"> 
+			<img id="reddit-link" src="http://i.imgur.com/sdO8tAw.png" align="right"> 
+		</a>
+		<h1 style="text-align: left; padding-left: 20px; width: 25%; margin: 0px;">Xander and Tommy</h1>
 	</div>
 	<div id="container">
 		<div id="content">
