Updated to project title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>AP Computer Science Principles Webpage</title>
+	<title>PC is Better</title>
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
@@ -9,7 +9,7 @@
 		<a href="https://www.reddit.com/r/pcmasterrace/" target="_blank"> 
 			<img id="reddit-link" src="http://i.imgur.com/sdO8tAw.png" align="right"> 
 		</a>
-		<h1 style="text-align: left; padding-left: 20px; width: 25%; margin: 0px;">Xander and Tommy</h1>
+		<h1 style="text-align: left; padding-left: 20px; width: 25%; margin: 0px;">PC VS CONSOLE</h1>
 	</div>
 	<div id="container">
 		<div id="content">
