--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</div>
 	<div id="container">
 		<div id="content">
-			<h2 style = "padding-top: 70px; padding-bottom: 100%">This is another header</h2>
+			<h2 style = "padding-top: 70px; padding-bottom: 100%">This is another pc</h2>
 			<h3 style = "padding-top: 70px;">This is a 3rd header</h3>
 		</div>
 	</div>
