--- a/index.html
+++ b/index.html
@@ -3,16 +3,24 @@
 <head>
 	<title>PC is Better</title>
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fjalla+One">
+	<style>
+
+	</style>
 </head>
 <body>
 	<div id="banner">
-		<a href="https://www.reddit.com/r/pcmasterrace/" target="_blank"> 
+		<h1 style="text-align: left;">PC VS CONSOLE</h1>
+	</div>
+	<div id="navbar">
+		<a id="navbar-page" href="index.html">Home</a>
+		<a  id="navbar-page" href="about.html">About</a>
+		<a href="https://www.reddit.com/r/pcmasterrace/" target="_blank" id="social"> 
 			<img id="reddit-link" src="http://i.imgur.com/sdO8tAw.png" align="right"> 
 		</a>
-		<h1 style="text-align: left; padding-left: 20px; width: 25%; margin: 0px;">PC VS CONSOLE</h1>
 	</div>
 	<div id="container">
-		<div id="content">
+		<div class="content">
 			<h2 style = "padding-top: 70px; padding-bottom: 100%">This is another pc</h2>
 			<h3 style = "padding-top: 70px;">This is a 3rd header</h3>
 		</div>
@@ -20,4 +28,19 @@
 	<div id="footer">
 
 	</div>
+
+	<script>
+	window.onscroll = function() {myFunction()};
+
+	var navbar = document.getElementById("navbar");
+	var sticky = navbar.offsetTop;
+
+	function myFunction() {
+	  if (window.pageYOffset >= sticky) {
+	    navbar.classList.add("sticky")
+	  } else {
+	    navbar.classList.remove("sticky");
+	  }
+	}
+	</script>
 </body>
