--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
 	<div id="navbar">
 		<a id="navbar-page" href="index.html">Home</a>
 		<a  id="navbar-page" href="about.html">About</a>
-		<a href="https://www.reddit.com/r/pcmasterrace/" target="_blank" id="social"> 
-			<img id="reddit-link" src="http://i.imgur.com/sdO8tAw.png" align="right"> 
-		</a>
+		<div class="dropdown">
+			<button class="dropbtn">Forums</button>
+			<div class="dropdown-content">
+				<a href="https://www.reddit.com/r/pcmasterrace/" target="_blank"><img src="pcmr.png" align="left" style="width: 250px;height: 40px;float: left;"></a>
+				<a href="https://linustechtips.com/main/" target="_blank"><img src="linustechtips.png" align="left"></a>
+			</div>
+		</div>
 	</div>
 	<div id="container">
 		<div class="content">
