--- a/about.html
+++ b/about.html
@@ -47,15 +47,62 @@ body {
 }
 
 </style>
+<style>
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  position: right;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-card-back {
+  background-color: #2980b9;
+  color: white;
+  transform: rotateY(180deg);
+}
+
+</style>
 </head>
 <body>
 
-<h1>PCMR</h1>
-<h3>Hover over the pc setup for more specs: </h3>
+<h1>ABOUT US</h1>
+<h3>Hover over the picture for more info about us! </h3>
+<div class="row">
 <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-      <img src="https://i.ytimg.com/vi/L9Jqnyt__Ps/maxresdefault.jpg" alt="Avatar" style="width:300px;height:300px;">
+      <img src="Images\xander v2.jpg" alt="Avatar" style="width:300px;height:300px;">
+       <img src="Images\Tommy.jpg" alt="Avatar" style="width:300px;height:300px; ">
     </div>
     <div class="flip-card-back">
       <h1>Monitor: LG 34UM88-P</h1> 
@@ -67,6 +114,20 @@ body {
     </div>
   </div>
 </div>
-
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="Images\Tommy.jpg" alt="Avatar" style="width:300px;height:300px; ">
+    </div>
+    <div class="flip-card-back">
+      <h1>Monitor: LG 34UM88-P</h1> 
+      <p>Keyboard: CTRL Keyboard</p> 
+      <p>Mouse: Corsair m65</p> 
+      <p>Processor: i9-9900k</p> 
+      <p>Motherboard: MSI Z390 GODLIKE</p> 
+      <p>PCMR. Turning bois into Men since 1950.</p>
+    </div>
+  </div>
+</div>
 </body>
 </html>
