updated flip cards

--- a/about.html
+++ b/about.html
@@ -47,6 +47,26 @@ body {
 }
 
 </style>
+</head>
+<body>
+
+<h1>ABOUT US</h1>
+<h3>Hover over the picture for more info about us! </h3>
+<div class="row">
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="Images\xander v2.jpg" alt="Avatar" style="width:300px;height:300px;">
+    </div>
+    <div class="flip-card-back">
+      <h1>This is Xander</h1> 
+      <p>
+      		Xander is one of two devs that worked on the PCMR website.
+      </p> 
+
+    </div>
+  </div>
+</div>
 <style>
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -92,40 +112,18 @@ body {
 }
 
 </style>
-</head>
-<body>
 
-<h1>ABOUT US</h1>
-<h3>Hover over the picture for more info about us! </h3>
-<div class="row">
-<div class="flip-card">
-  <div class="flip-card-inner">
-    <div class="flip-card-front">
-      <img src="Images\xander v2.jpg" alt="Avatar" style="width:300px;height:300px;">
-       <img src="Images\Tommy.jpg" alt="Avatar" style="width:300px;height:300px; ">
-    </div>
-    <div class="flip-card-back">
-      <h1>Monitor: LG 34UM88-P</h1> 
-      <p>Keyboard: CTRL Keyboard</p> 
-      <p>Mouse: Corsair m65</p> 
-      <p>Processor: i9-9900k</p> 
-      <p>Motherboard: MSI Z390 GODLIKE</p> 
-      <p>PCMR. Turning bois into Men since 1950.</p>
-    </div>
-  </div>
-</div>
 <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
       <img src="Images\Tommy.jpg" alt="Avatar" style="width:300px;height:300px; ">
     </div>
     <div class="flip-card-back">
-      <h1>Monitor: LG 34UM88-P</h1> 
-      <p>Keyboard: CTRL Keyboard</p> 
-      <p>Mouse: Corsair m65</p> 
-      <p>Processor: i9-9900k</p> 
-      <p>Motherboard: MSI Z390 GODLIKE</p> 
-      <p>PCMR. Turning bois into Men since 1950.</p>
+      <h1>This is Tommy</h1> 
+      <p>
+      		Tommy is one of two devs that worked on the PCMR website. 
+      </p> 
+
     </div>
   </div>
 </div>
