--- a/about.html
+++ b/about.html
@@ -1,58 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.flip-card {
-  background-color: transparent;
-  width: 300px;
-  height: 300px;
-  perspective: 1000px;
-}
-
-.flip-card-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: transform 0.6s;
-  transform-style: preserve-3d;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-}
-
-.flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
-}
-
-.flip-card-front, .flip-card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-}
-
-.flip-card-front {
-  background-color: #bbb;
-  color: black;
-}
-
-.flip-card-back {
-  background-color: #2980b9;
-  color: white;
-  transform: rotateY(180deg);
-}
-
-</style>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>PC is Better/About</title>
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <link rel="stylesheet" type="text/css" href="about.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fjalla+One">
 </head>
 <body>
-
-<h1>ABOUT US</h1>
-<h3>Hover over the picture for more info about us! </h3>
-<div class="row">
+<div id="banner">
+    <h1 style="text-align: left;">PC VS CONSOLE</h1>
+  </div>
+  <div id="navbar">
+    <a id="navbar-page" href="index.html">Home</a>
+    <a  id="navbar-page" href="about.html">About</a>
+    <div class="dropdown">
+      <button class="dropbtn">Forums</button>
+      <div class="dropdown-content">
+        <a href="https://www.reddit.com/r/pcmasterrace/" target="_blank"><img src="pcmr.png" align="left" style="width: 250px;height: 40px;float: left;"></a>
+        <a href="https://linustechtips.com/main/" target="_blank"><img src="linustechtips.png" align="left"></a>
+      </div>
+    </div>
+  </div>
+<div class="content">
 <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
@@ -67,53 +37,7 @@ body {
     </div>
   </div>
 </div>
-<style>
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.flip-card {
-  background-color: transparent;
-  width: 300px;
-  height: 300px;
-  perspective: 1000px;
-}
-
-.flip-card-inner {
-  position: right;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: transform 0.6s;
-  transform-style: preserve-3d;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-}
-
-.flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
-}
-
-.flip-card-front, .flip-card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-}
-
-.flip-card-front {
-  background-color: #bbb;
-  color: black;
-}
-
-.flip-card-back {
-  background-color: #2980b9;
-  color: white;
-  transform: rotateY(180deg);
-}
-
-</style>
-
-<div class="flip-card">
+<div class="flip-card" style="float: right;">
   <div class="flip-card-inner">
     <div class="flip-card-front">
       <img src="Images\Tommy.jpg" alt="Avatar" style="width:300px;height:300px; ">
@@ -121,7 +45,7 @@ body {
     <div class="flip-card-back">
       <h1>This is Tommy</h1> 
       <p>
-      		Tommy is one of two devs that worked on the PCMR website. 
+          Tommy is one of two devs that worked on the PCMR website. 
       </p> 
 
     </div>
