--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 		<div class="dropdown">
 			<button class="dropbtn">Forums</button>
 			<div class="dropdown-content">
-				<a href="https://www.reddit.com/r/pcmasterrace/" target="_blank"><img src="pcmr.png"></a>
-				<a href="https://linustechtips.com/main/" target="_blank"><img src="linustechtips.png"></a>
+				<a href="https://www.reddit.com/r/pcmasterrace/" target="_blank"><img src="Images/pcmr.png"></a>
+				<a href="https://linustechtips.com/main/" target="_blank"><img src="Images/linustechtips.png"></a>
 			</div>
 		</div>
 	</div>
