About Page Update
Full Dark Mode Background. Separated Icons however. We'll have to live with it

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
       </div>
     </div>
   </div>
-<div class="content">
+<div class="content" style="margin-left: 0%;margin-right: 0px;border-bottom-width: 0px;border-bottom-style: solid;padding-bottom: 10000000000px;">
 <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
