Updated About Page

--- a/about.html
+++ b/about.html
@@ -17,9 +17,9 @@
     <div class="dropdown">
       <button class="dropbtn">Forums</button>
       <div class="dropdown-content">
-        <a href="https://www.reddit.com/r/pcmasterrace/" target="_blank"><img src="pcmr.png" align="left" style="width: 250px;height: 40px;float: left;"></a>
-        <a href="https://linustechtips.com/main/" target="_blank"><img src="linustechtips.png" align="left"></a>
-      </div>
+				<a href="https://www.reddit.com/r/pcmasterrace/" target="_blank"><img src="Images/pcmr.png"></a>
+				<a href="https://linustechtips.com/main/" target="_blank"><img src="Images/linustechtips.png"></a>
+			</div>
     </div>
   </div>
 <div class="content" style="margin-left: 0%;margin-right: 0px;border-bottom-width: 0px;border-bottom-style: solid;padding-bottom: 10000000000px;">
