Updated GPU Specs

--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
 	<div id="container">
 		<div class="content">
 			<div class="consolevpc">
-				<img src="Images/XBox/xbox.png" style="width: 300px; height 150px;">
-				<img src="Images/PC/Gaming-Tower.png" align="right" style="width: 300px; height 500px;">
+				<img src="Images/XBox/xbox.png" style="width: 300px; height: auto;">
+				<img src="Images/PC/Gaming-Tower.png" align="right" style="width: 300px; height: auto;">
 				<p class="console-tag"><strong>X-Box One</strong></p>
 				<p class="pc-tag" align="right"><strong>PC</strong></p>
 			</div>
 			<div class="gpuspecs">
-				<img src="Images/XBox/xbox.png" style="max-width: 300px; height: auto; width: 100%;">
-				<img src="Images/PC/Gaming-Tower.png" align="right" style="max-width: 300px; height auto; width: 100%;">
-				<p class="console-tag"><strong>X-Box One</strong></p>
-				<p class="pc-tag" align="right"><strong>PC</strong></p>
+				<p class="console-tag-gpu"><strong>Custom AMD X-Box GPU<br>853 MHz of Performance</strong></p>
+				<p class="pc-tag-gpu" align="right"><strong>GTX 1080 TI<br>1582 MHz of Performance</strong></p>
+				<img src="Images/XBox/gpu.jpg" style="max-width: 300px; height: auto; width: 100%;">
+				<img src="Images/PC/gpu.png" align="right" style="max-width: 400px; height auto; width: 100%;">
 			</div>
 			<div id="footer">
 				<p style="padding-top: 10000px; font-size:50px; text-align: center;"> END </p>
